# destructure_traitobject

./: AUTHORS.txt  Cargo.toml  LICENSE_MIT.txt  README.md
src/: impls.rs  lib.rs
